<resources>
    <string name="app_name">Delt\'app</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="logo_application">Logo Application</string>
    <string name="delt_app">Delt\'app</string>
    <string name="email">E-mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="noAccount">Pas encore de compte ?</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="confirmation_mot_de_passe">Confirmation Mot de passe</string>
    <string name="s_inscrire">S\'inscrire</string>
</resources>