<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.deltapp.LoginApp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo_application"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/nameApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:text="@string/delt_app"
        android:textColor="@color/logocolor"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/emailLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTintMode="screen"
        android:elevation="1dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/pwdLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameApp" />

    <EditText
        android:id="@+id/pwdLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTintMode="screen"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/emailLogin"
        app:layout_constraintStart_toStartOf="@+id/emailLogin"
        app:layout_constraintTop_toBottomOf="@+id/emailLogin" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/aref_ruqaa"
        android:text="@string/connexion"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/newAccountBtn"
        app:layout_constraintEnd_toEndOf="@+id/pwdLogin"
        app:layout_constraintStart_toStartOf="@+id/pwdLogin"
        app:layout_constraintTop_toBottomOf="@+id/pwdLogin" />

    <Button
        android:id="@+id/newAccountBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#FFF5F5F5"
        android:fontFamily="@font/aref_ruqaa"
        android:text="@string/noAccount"
        android:textAllCaps="false"
        android:textColor="#FF777777"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pwdLogin"
        app:layout_constraintStart_toStartOf="@+id/pwdLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>